--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,10 @@
-@import "tailwindcss";
+body {}
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.lista {
+  border-bottom: 1px solid #040000;
+  padding-bottom: 50px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.lista li {
+  color: #040000;
 }
